WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25130
onclick not fired for an element copied with cloneContents() or cloneNode()
https://bugs.webkit.org/show_bug.cgi?id=25130
Summary
onclick not fired for an element copied with cloneContents() or cloneNode()
Mnafred Staudinger
Reported
2009-04-10 02:36:59 PDT
If you click on the "Q" label (an anchor), the onclick="toggleInto(event, 'Index_Q_div')" starts a javascript to retrieve a list of names and insert them into the document. On each name there is again an onclick="toggleInto(event, 'uniqueId')" specified, but now the javascript does _not_ get control and the content gets displayed on a separate page. It works as expected in Firefox 3.0.8 and Opera 9.64.
Attachments
test case
(504 bytes, application/xhtml+xml)
2009-04-10 09:24 PDT
,
Alexey Proskuryakov
no flags
Details
proposed fix
(50.30 KB, patch)
2009-09-24 16:36 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
now with Windows build fix
(53.55 KB, patch)
2009-09-28 18:55 PDT
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-04-10 09:24:46 PDT
Created
attachment 29391
[details]
test case
Alexey Proskuryakov
Comment 2
2009-04-10 09:25:13 PDT
See also:
bug 23318
.
Alexey Proskuryakov
Comment 3
2009-09-22 09:44:31 PDT
***
Bug 29533
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4
2009-09-24 16:36:09 PDT
Created
attachment 40092
[details]
proposed fix
Alexey Proskuryakov
Comment 5
2009-09-24 16:38:43 PDT
CC'ing Adam, since this slightly touches XSSAuditor, and could be security sensitive in general.
Adam Barth
Comment 6
2009-09-24 16:48:51 PDT
This patch appears to largely undo a recent patch by Sam. Maybe I'm confusing two things.
Sam Weinig
Comment 7
2009-09-24 17:56:41 PDT
(In reply to
comment #6
)
> This patch appears to largely undo a recent patch by Sam. Maybe I'm confusing > two things.
This isn't actually touching the same code, I added global objects to some other callback objects, but it is a very similar case. I need to think about when/if passing the scriptExecutionContext() won't work where storing a globalObject would.
Sam Weinig
Comment 8
2009-09-25 13:15:39 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > This patch appears to largely undo a recent patch by Sam. Maybe I'm confusing > > two things. > > This isn't actually touching the same code, I added global objects to some > other callback objects, but it is a very similar case. I need to think about > when/if passing the scriptExecutionContext() won't work where storing a > globalObject would.
After thinking this over, I think this is the right direction to go and we should convert our other callback objects to use the same technique. r=me as well.
Alexey Proskuryakov
Comment 9
2009-09-25 13:45:17 PDT
Committed revision 48767.
Alexey Proskuryakov
Comment 10
2009-09-25 17:22:58 PDT
Fix reverted in
r48778
, because it broke Windows build, and we don't yet know how to fix it.
Eric Seidel (no email)
Comment 11
2009-09-26 01:33:37 PDT
Comment on
attachment 40092
[details]
proposed fix Sad. Marking r- since this was reverted. Hopefully a fix can be found soon! :)
Pavel Feldman
Comment 12
2009-09-27 02:45:54 PDT
WebCore/ChangeLog has been corrupted while reverting. Restored. Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog Committed
r48800
Alexey Proskuryakov
Comment 13
2009-09-28 18:55:55 PDT
Created
attachment 40278
[details]
now with Windows build fix
Alexey Proskuryakov
Comment 14
2009-09-29 11:05:32 PDT
Committed revision 48884.
Alexey Proskuryakov
Comment 15
2009-09-29 11:40:08 PDT
Build fix in
r48887
.
Lucas Forschler
Comment 16
2019-02-06 09:02:43 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug