third_party/WebKit/WebCore/bindings/objc/ObjCEventListener.mm
@@ -74,7 +74,7 @@ ObjCEventListener::~ObjCEventListener()
     [m_listener release];
 }
 
-void ObjCEventListener::handleEvent(Event* event)
+void ObjCEventListener::handleEvent(ScriptExecutionContext*, Event* event)
 {
     [m_listener handleEvent:kit(event)];
 }
